tests/error/result_errors/result_tag_not_static.err
Error: Invalid call of overloaded function (at $FILE:7:11)
  | 
5 | @compile_guppy
6 | def foo(y: bool, x: int) -> None:
7 |     result("foo" if y else "bar", x)
  |            ^^^^^^^^^^^^^^^^^^^^^^^^ No variant of overloaded function `result` takes arguments
  |                                     `str`, `int`

Note: Available overloads are:
  def result(tag: str @comptime, value: int) -> None
  def result(tag: str @comptime, value: nat) -> None
  def result(tag: str @comptime, value: bool) -> None
  def result(tag: str @comptime, value: float) -> None
  def result(tag: str @comptime, value: array[int, n]) -> None
  def result(tag: str @comptime, value: array[nat, n]) -> None
  def result(tag: str @comptime, value: array[bool, n]) -> None
  def result(tag: str @comptime, value: array[float, n]) -> None

Guppy compilation failed due to 1 previous error
